--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,15 @@
 
   --main-bg-cl: #ffffff;
   --primary-bg-cl: #f6f6f8;
-  --accent-bg-cl: linear-gradient(90deg, #504dc2 20.44%, #5f12d0 80.91%);
+  --accent-bg-cl: linear-gradient(90deg, #504dc2 20%, #5f12d0 80%);
+
+  --border-cl: #e0e0e0;
+
+  /* grid */
+  /* отступ между элементами */
+  --gap: 30px;
+  /* количество элементов в сетке  */
+  --item: 1;
 }
 
 /* COMMON STYLES */
@@ -44,6 +52,12 @@ h6,
 p {
   margin: 0;
   padding: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .text-white {
@@ -122,6 +136,20 @@ p {
   cursor: pointer;
 }
 
+/* GRID LAYOUT */
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: calc(var(--gap) * -1);
+  margin-left: calc(var(--gap) * -1);
+}
+
+.grid-item {
+  flex-basis: calc(100% / var(--item) - var(--gap));
+  margin-top: var(--gap);
+  margin-left: var(--gap);
+}
+
 /* HEADER SECTION */
 .header {
   background-color: #999999;
@@ -129,8 +157,8 @@ p {
 }
 
 .nav .list {
-  /* display: flex;
-  justify-content: flex-end; */
+  display: flex;
+  justify-content: flex-end;
 }
 
 .header .link {
@@ -202,15 +230,44 @@ p {
 }
 
 .services .list {
+  --item: 3;
+
   margin-bottom: 55px;
+}
+
+.services .item {
+  display: flex;
+  align-items: flex-start;
+}
+
+.services .subtitle {
+  margin-bottom: 12px;
+}
+.services .text-wrapper {
+  margin-top: 45px;
+}
+.services {
+}
+.services {
 }
 
 /* ABOUT-US SECTION */
 .about-us {
+  padding-top: 100px;
+  padding-bottom: 70px;
   background: var(--primary-bg-cl);
 }
 .about-us .wrapper {
-  width: 540px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding-bottom: 90px;
+  margin-bottom: 70px;
+  border-bottom: 1px solid var(--border-cl);
+}
+.about-us .inner-wrapper {
+  width: 490px;
 }
 
 .about-us .title {
@@ -219,19 +276,35 @@ p {
 
 .about-us .description {
   margin-bottom: 30px;
-
   font-size: 16px;
   line-height: 1.56;
 
   color: var(--main-txt-cl);
 }
 
-.about-us .list {
-  /* display: flex; */
+.about-us .picture {
+  box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
+  border-radius: 30px;
 }
 
-.about-us .wrapper {
+.about-us .list {
+  --item: 5;
+  --gap: 85px;
+}
+
+.about-us .link {
+  display: flex;
+  flex-direction: column;
+}
+
+.about-us .thumb {
+  display: flex;
+  align-items: baseline;
   margin-bottom: 18px;
+}
+
+.about-us .img {
+  margin-right: 20px;
 }
 
 .about-us .decor {
@@ -243,53 +316,127 @@ p {
 
 /* ALL SERVICES SECTION*/
 .all-services {
+  padding-top: 100px;
+  padding-bottom: 85px;
+
+  background-image: var(--accent-bg-cl);
 }
+
+.all-services .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  margin-bottom: 70px;
+}
+.all-services .title {
+  width: 540px;
+}
+
 .all-services .list {
+  --item: 3;
 }
 .all-services .item {
 }
 .all-services .img {
+  margin-bottom: 30px;
+  border-radius: 10px;
 }
 .all-services .subtitle {
+  --black-txt-cl: #000000;
+  margin-bottom: 30px;
 }
 .all-services .text {
+  margin-bottom: 30px;
 }
 
 /* ALL-PROJECTS SECTION*/
 .all-projects {
+  text-align: center;
   background-color: var(--primary-bg-cl);
 }
 .all-projects .title {
+  margin-bottom: 50px;
 }
 .all-projects .text {
+  margin-bottom: 70px;
 }
 .all-projects .list {
+  --item: 4;
+
+  margin-bottom: 40px;
 }
 .all-projects .item {
 }
 
+.all-projects-img {
+  border-radius: 10px;
+}
+
 /* VIDEO SECTION*/
 .video {
+  padding-top: 70px;
+  text-align: center;
+  background-image: url(../img/video/bg-img.jpg);
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+
+.video .container {
+  padding-bottom: 85px;
+  border-bottom: 1px solid #e0e0e0;
 }
 .video .title {
+  margin-bottom: 30px;
 }
 .video .text {
+  margin-bottom: 70px;
 }
 .video .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 970px;
+  height: 430px;
+  margin: 0 auto;
+
+  border-radius: 10px;
+  background-image: url(../img/video/video-preview.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .video .thumb {
+  display: flex;
+  align-items: center;
+  padding: 20px 40px;
+
+  border: 1px solid #ffffff;
+  border-radius: 200px;
 }
 .video-btn {
+  width: 60px;
+  height: 60px;
+  margin-right: 20px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 .video .descr {
 }
 
 /* SUBSCIBE SECTION */
-.subscribe .title {
+.subscribe {
+  text-align: center;
+}
+.subscribe .subtitle {
+  margin-bottom: 20px;
 }
 .subscribe .text {
+  margin-bottom: 30px;
 }
 .subscribe .form {
+  margin-bottom: 20px;
 }
 .subscribe .form-input {
 }
@@ -300,9 +447,12 @@ p {
 
 /* FOOTER */
 .footer {
+  padding-top: 60px;
+  padding-bottom: 40px;
   background-color: var(--primary-bg-cl);
 }
 .footer .list {
+  --item: 4;
 }
 .footer .list-item {
 }
